Fix posted date in story not showing

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -15,7 +15,6 @@
 
 .title {
   margin: 0;
-  font-family: 'The Nautigal', cursive;
   font-size: 2em;
 }
 
