--- a/src/pages/signup/signup.module.css
+++ b/src/pages/signup/signup.module.css
@@ -64,3 +64,7 @@
 .btnSignIp {
   text-decoration: none;
 }
+
+.btnSignIp:hover {
+  border-bottom: 1px solid rgb(97, 97, 226);
+}
